add download option

--- a/style/styles.css
+++ b/style/styles.css
@@ -5,8 +5,8 @@
 }
 body{
     background-color: rgb(195, 195, 195);
-    align-items: center;
-    justify-content: center;
+    /* align-items: center;
+    justify-content: center; */
     }
 .main{
     display: flex;
@@ -147,6 +147,28 @@ margin: 10px 0px;
 .detailsJob li{
     margin-bottom: 5px;
 }
+.input-icons{
+    background-color: #263748;
+    color: #fff;
+    padding: 10px;
+    font-size: 12px;
+    border-radius: 10px;
+    border: 1px solid #263748;
+    font-weight: bold;
+    text-transform: uppercase;
+    position:absolute;
+    top:10px;
+    right:15px;
+    display : 'block';
+}
+.generatePDF{
+    background-color: #263748;
+    color: #fff;
+    font-size: 12px;
+    border: 1px solid #263748;
+    font-weight: bold;
+    text-transform: uppercase;
+}
 /* #111421 */
 @media(max-width:1300px){
     .main{
@@ -169,3 +191,18 @@ margin: 10px 0px;
         margin-top: 1rem;
     }
 }
+@media print {
+    /* Example customizations */
+    body {
+      margin: none;
+      padding: none;
+      font-size: 12pt;
+      background-color: white;
+    }
+    .main{
+        height: 100%;
+    }
+    .leftBar{
+        padding: 15px;
+    }
+  }
